--- a/src/main/webapp/css/board/boardWrite.css
+++ b/src/main/webapp/css/board/boardWrite.css
@@ -36,6 +36,7 @@
     padding: 10px 20px;
     box-sizing: border-box;
     overflow-y: scroll;
+    font-size: 15px;
 }
 
 .radio-box {
@@ -60,6 +61,7 @@
 select {
     height: 46px;
     border: 1px solid #d9d9d9;
+    padding-left: 12px;
 }
 
 .table li .label {
@@ -75,6 +77,7 @@ textarea {
     height: 315px;
     resize: none;
     border: 1px solid #d9d9d9;
+    padding: 12px;
 }
 
 .contents-con .input {
@@ -98,6 +101,7 @@ textarea {
     color: #fff;
     margin-left: 5px;
     cursor: pointer;
+    outline: none;
 }
 
 .appendix-con input {
@@ -123,6 +127,7 @@ textarea {
     line-height: 50px;
     float: left;
     cursor: pointer;
+    outline: none;
 }
 
 .button-box button.left-button {
