--- a/src/main/webapp/css/info/diagnosticEquipmentSystem.css
+++ b/src/main/webapp/css/info/diagnosticEquipmentSystem.css
@@ -49,7 +49,8 @@
     width: 40px;
     height: 40px;
     margin-right: 14px;
-    padding: 12px;
+    line-height: 40px;
+    padding: 0;
     box-sizing: border-box;
     border: 1px solid #ddd;
     border-radius: unset;
