--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -2046,7 +2046,7 @@ body .section07 .bx-pager-link span + span {
 .case .login {
     /* position: absolute; */
     width: 100%;
-    height: 235px;
+    height: 227px;
     background: #050608;
     color: #fff;
     text-align: center;
@@ -2150,7 +2150,7 @@ body .section07 .bx-pager-link span + span {
 }
 
 .slide-item > .module {
-    height: 235px;
+    height: 227px;
     position: absolute;
     width: 100%;
 }
@@ -2647,6 +2647,7 @@ body .section07 .bx-pager-link span + span {
 
     .fp-menu ul.quick {
         transform: translateX(-50%) translateY(130px);
+        right: -40px;
     }
 
     .section02 li img.mobile {
