--- a/src/main/webapp/css/tooth/aesthetic.css
+++ b/src/main/webapp/css/tooth/aesthetic.css
@@ -1,3 +1,7 @@
+.section09 .slick-arrow {
+    display: block !important;
+}
+
 .tab-container {
     display: none;
 }
@@ -52,7 +56,7 @@
 .section01 .image_box_left {
     width: 50%;
     max-width: 1276px;
-    height: 552px;
+    height: 501px;
     top: -57px;
 }
 
@@ -267,7 +271,7 @@
     height: 376px;
     width: 50%;
     z-index: 10;
-    margin-top: 65px;
+    margin-top: 35px;
 }
 
 .section05 .image_box_right .img {
