메인에 우측 글자를 이미지에서 텍스트로 변경하기

--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -1821,7 +1821,13 @@ body .section07 .bx-pager-link span + span {
 }
 
 .fp-menu .active .text {
-    display: none;
+    display: block;
+    margin-top: 30px;
+    margin-bottom: 40px;
+}
+
+.dark .fp-menu .active .text {
+    color: #222;
 }
 
 .fp-menu .text {
@@ -1829,7 +1835,7 @@ body .section07 .bx-pager-link span + span {
     position: relative;
     color: #fff;
     font-family: "poppins", sans-serif;
-    font-size: 16px;
+    font-size: 13px;
     font-weight: 600;
     white-space: nowrap;
     transform: rotate(90deg);
@@ -1837,7 +1843,7 @@ body .section07 .bx-pager-link span + span {
 }
 
 .fp-menu .active .img {
-    display: block;
+    display: none;
     background: url(../images/main/misowon_right.png) no-repeat center;
     border: none;
     width: 11px;
@@ -1896,13 +1902,15 @@ body .section07 .bx-pager-link span + span {
     transition: all .3s ease;
 }
 
-.fp-menu li:nth-child(1).active a {padding-bottom: 60px;}
-.fp-menu li:nth-child(2).active a {padding-bottom: 60px}
-.fp-menu li:nth-child(3).active a {padding-bottom: 60px}
-.fp-menu li:nth-child(4).active a {padding-bottom: 60px}
-.fp-menu li:nth-child(5).active a {padding-bottom: 60px}
-.fp-menu li:nth-child(6).active a {padding-bottom: 60px}
-.fp-menu li:nth-child(7).active a {padding-bottom: 60px}
+.fp-menu li:nth-child(1).active a {padding-bottom: 50px}
+.fp-menu li:nth-child(2).active a {padding-bottom: 88px;}
+.fp-menu li:nth-child(3).active a {padding-bottom: 37px;}
+.fp-menu li:nth-child(4).active a {padding-bottom: 47px;}
+.fp-menu li:nth-child(5).active a {padding-bottom: 80px;}
+.fp-menu li:nth-child(6).active a {padding-bottom: 68px;}
+.fp-menu li:nth-child(7).active a {padding-bottom: 67px;}
+.fp-menu li:nth-child(8).active a {padding-bottom: 43px;}
+.fp-menu li:nth-child(9).active a {padding-bottom: 50px}
 
 .scroll {
     position: absolute;
@@ -1984,6 +1992,8 @@ body .section07 .bx-pager-link span + span {
     line-height: 121px;
     font-size: 16px;
     transition: all .3s ease;
+    letter-spacing: -0.5px;
+    font-size: 14.5px;
 }
 
 .section07 .text .num {
@@ -2046,7 +2056,7 @@ body .section07 .bx-pager-link span + span {
 .case .login {
     /* position: absolute; */
     width: 100%;
-    height: 227px;
+    height: 235px;
     background: #050608;
     color: #fff;
     text-align: center;
@@ -2150,7 +2160,7 @@ body .section07 .bx-pager-link span + span {
 }
 
 .slide-item > .module {
-    height: 227px;
+    height: 235px;
     position: absolute;
     width: 100%;
 }
@@ -2647,7 +2657,6 @@ body .section07 .bx-pager-link span + span {
 
     .fp-menu ul.quick {
         transform: translateX(-50%) translateY(130px);
-        right: -40px;
     }
 
     .section02 li img.mobile {
