--- a/src/main/webapp/css/admin/comm/nav.css
+++ b/src/main/webapp/css/admin/comm/nav.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 /* CSS Document */
 
-nav {width:262px;/* float:none; */background:#282828;height:auto;overflow: hidden;float: left;min-height: 1000px;}
+nav {width:262px;/* float:none; */background:#282828;height:auto;overflow: hidden;float: left;min-height: 100vh;height: 100vh !important;padding-bottom: 163px;z-index: 1111111111111;}
 .head_title {height:80px;background: #161b2f;}
 .head_title p {text-align:center;line-height:82px;color:#fff;text-transform:uppercase;font-size: 12pt;}
 .head_title p a {color:#fff;}
