--- a/src/main/webapp/css/admin/comm/footer.css
+++ b/src/main/webapp/css/admin/comm/footer.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 /* CSS Document */
 
-footer {/* clear:both; */height:70px;float:right;width: 82.5%;}
+footer {/* clear:both; */height:70px;float:right;width: 82.5%;box-sizing: border-box;margin-top: -5px;position: absolute;bottom: 0;left: 0;width: 100%;padding-left: 262px;}
 footer p {text-indent:30px;line-height:70px;text-transform:uppercase;background:#eeeeee;}
 
 .footSpan {text-transform:capitalize;padding-left: 28px;color: #fff;}
