--- a/src/main/webapp/css/admin/login/login.css
+++ b/src/main/webapp/css/admin/login/login.css
@@ -1,9 +1,11 @@
 @CHARSET "UTF-8";
 body {background:#282828;}
-.wrap {width:1100px;height:490px;position:absolute;top:50%;left:50%;margin-left:-550px;margin-top:-245px;border: 15px solid #ec6707;box-sizing:border-box;background: url(../../images/admin/login.gif);}
-.logo {display:inline-block;float: left;margin-left: 80px;margin-top: 91px;}
-.form {float:left;}
-.formBox {padding: 140px 0 0 113px;}
+.wrap {width:1100px;height:490px;position:absolute;top:50%;left:50%;margin-left:-550px;margin-top:-245px;border: 15px solid #ec6707;box-sizing:border-box;}
+.wrap .logo {background: url(../../../images/admin/admin_logo.png) no-repeat left center;background-position-x: 60px;z-index: 1111111;width: 530px;height: 100%;float: left;margin: 0;}
+.wrap:before {position: absolute;background:url(../../../images/admin/admin_background.gif);content:'';width: 100%;height: 100%;}
+.logo {display:inline-block;float: left;margin-left: 80px;margin-top: 91px;position: relative;z-index: 111;}
+.form {float:left;position: relative;width: 50%;}
+.formBox {padding-top: 100px;padding-left: 50px;}
 
 .loginText {font-size:51px;line-height: 70px;margin-bottom: 10px;color: #444;}
 .loginInputBox input {width:235px;height:43px;border:1px solid #dbdbdb;box-sizing:border-box;padding-left:10px;color: #777;}
