--- a/src/main/webapp/css/admin/login/login.css
+++ b/src/main/webapp/css/admin/login/login.css
@@ -1,6 +1,6 @@
 @CHARSET "UTF-8";
 body {background:#282828;}
-.wrap {width:1100px;height:490px;position:absolute;top:50%;left:50%;margin-left:-550px;margin-top:-245px;border: 15px solid #ec6707;box-sizing:border-box;}
+.wrap {width:1100px;height:490px;position:absolute;top:50%;left:50%;margin-left:-550px;margin-top:-245px;border: 15px solid #3b3633;box-sizing:border-box;}
 .wrap .logo {background: url(../../../images/admin/admin_logo.png) no-repeat left center;background-position-x: 60px;z-index: 1111111;width: 530px;height: 100%;float: left;margin: 0;}
 .wrap:before {position: absolute;background:url(../../../images/admin/admin_background.gif);content:'';width: 100%;height: 100%;}
 .logo {display:inline-block;float: left;margin-left: 80px;margin-top: 91px;position: relative;z-index: 111;}
