--- a/src/main/webapp/css/admin/login/login.css
+++ b/src/main/webapp/css/admin/login/login.css
@@ -1,11 +1,26 @@
 @CHARSET "UTF-8";
 body {background:#282828;}
-.wrap {width:1100px;height:490px;position:absolute;top:50%;left:50%;margin-left:-550px;margin-top:-245px;border: 15px solid #3b3633;box-sizing:border-box;}
-.wrap .logo {background: url(../../../images/admin/admin_logo.png) no-repeat left center;background-position-x: 60px;z-index: 1111111;width: 530px;height: 100%;float: left;margin: 0;}
+.wrap {width:1100px;height:490px;position:absolute;top:50%;left:50%;margin-left:-550px;margin-top:-245px;border: 15px solid #ec6707;box-sizing:border-box;}
+.wrap .logo {
+    padding: 220px 60px 0;
+    box-sizing: border-box;
+    background-position-y: 150px;
+    background: url(../../../images/admin/admin_logo.png) no-repeat left center;
+    background-position-x: 60px;
+    z-index: 1111111;
+    width: 480px;
+    height: 100%;
+    float: left;
+    margin: 0;
+    background-position-y: 148px;
+    text-align: center;
+}
+.wrap .logo h2 {font-size: 30px;color:#222;margin-bottom: 5px;}
+.wrap .logo p {font-size: 20px;paadding-top: 0;margin-top: 0;color:#d0d0d0;}
 .wrap:before {position: absolute;background:url(../../../images/admin/admin_background.gif);content:'';width: 100%;height: 100%;}
 .logo {display:inline-block;float: left;margin-left: 80px;margin-top: 91px;position: relative;z-index: 111;}
 .form {float:left;position: relative;width: 50%;}
-.formBox {padding-top: 100px;padding-left: 50px;}
+.formBox {padding-top: 100px;padding-left: 100px;}
 
 .loginText {font-size:51px;line-height: 70px;margin-bottom: 10px;color: #444;}
 .loginInputBox input {width:235px;height:43px;border:1px solid #dbdbdb;box-sizing:border-box;padding-left:10px;color: #777;}
