--- a/src/main/webapp/css/board/case.css
+++ b/src/main/webapp/css/board/case.css
@@ -1,3 +1,16 @@
+.after {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 45px;
+    line-height:45px;
+    color: #fff;
+    background: #9b8b7e;
+}
+.gallery-list .gallery li h7 {
+    margin-top: 17px;
+    margin-bottom: 15px;
+}
 .no-login {
     position: absolute;
     top: 0;
@@ -88,6 +101,17 @@
     color: #fff;
 }
 
+@media screen and (max-width: 640px) {
+    .no-login .text {
+        width: 71%;
+        font-size: 14px;
+        word-break: keep-all;
+    }
+    .gallery-list .gallery li p {
+        padding-bottom: 0;
+        margin-bottom: 23px;
+    }
+}
 
 @media screen and (max-width: 415px) {
     .tab li a {
@@ -118,6 +142,21 @@
 }
 
 @media screen and (max-width: 375px) {
+    .login-btn {
+        width: 100px;
+        font-size: 12px;
+        padding-left: 11px;
+        height: 32px;
+        line-height: 30px;
+        margin-top: 10px;
+    }
+    .login-btn:before {
+        width: 17px;
+        background-size: contain;
+        background-repeat: no-repeat;
+        top: 13px;
+        right: 10px;
+    }
     .tab li a {
         font-size:14px;
         letter-spacing:-1px;
