--- a/src/main/webapp/css/board/media.css
+++ b/src/main/webapp/css/board/media.css
@@ -1,3 +1,19 @@
+.gallery-list .gallery li h5 {
+    width: 220px;
+    margin: 32px auto 0;
+    height: 56px;
+    line-height: 1.4;
+    word-break: keep-all;
+}
+
+.gallery-list .gallery li h7 {
+    color: #939393;
+    margin-top: 13px;
+    display: block;
+    font-family: gmarket !important;
+    font-size: 14px;
+}
+
 .tab {
     overflow: hidden;
     margin-left: -2px;
@@ -29,6 +45,16 @@
     color: #fff;
 }
 
+@media screen and (max-width: 640px) {
+    .gallery-list .gallery li h5 {
+        width: 100%;
+        height: 2.7em;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+    }
+}
 
 @media screen and (max-width: 415px) {
     .tab li a {
